# Salary-Prediction-Application

./: .gitignore  README.md  download_data.py  first powershells commands.txt  main.py  pyproject.toml
fastapi_app/: main.py  model_loader.py  requirements.txt  schemas.py  utils.py
local_pipeline/: llm_analyzer.py
scripts/: call_api.py
src/: eda.py  preprocess.py  train_model.py
streamlit_dashboard/: dashboard.py  requirements.txt
